[metadata]
name = nouvelordre
version = 0.1
author = Feth Arezki
author_email = feth@tuttu.info
summary = A tool for reordering import statements inside Python code blocks.
description_file = README
keywords = python imports, rewriting
home_page = https://github.com/feth/nouvelordre
requires_dist =
    traits (>= 3.4.0)
    argparse (>= 1.1)
requires_python = 2.6.6
license = GPLv3
classifier =
    License :: OSI Approved :: GNU General Public License (GPL)
    Intended Audience :: Developers

[files]
scripts =
    nouvelordre.py
    nouvelordre_test.sh
