[metadata]
name = nouvelordre
version = 0.1
author = Feth Arezki
author_email = feth >AT< tuttu dot info
summary = A tool for reordering import statements inside Python code blocks.
description_file = README.rst
keywords = python imports, rewriting
home_page = https://github.com/feth/nouvelordre
requires_dist =
    Traits (>= 3.4.0)
    argparse (>= 1.1)
requires_python >= 2.6.1
license = GPLv3
classifier =
    License :: OSI Approved :: GNU General Public License (GPL)
    Intended Audience :: Developers

[files]
packages =
    nouvelordre
scripts =
    nouvelordre/reorder
    nouvelordre_test.sh
extra_files =
    setup.cfg
    setup.py
    AUTHORS
    LICENSE
    MANIFEST.in
    README.rst
